--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -224,6 +224,10 @@
                             <mask key="subviews">
                                 <exclude reference="8BJ-fL-n9R"/>
                             </mask>
+                            <mask key="constraints">
+                                <exclude reference="7iH-Ed-dlB"/>
+                                <exclude reference="Isb-EK-Nuv"/>
+                            </mask>
                         </variation>
                     </view>
                     <connections>
