--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -507,14 +507,123 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kyY-w9-3BO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="161" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kyY-w9-3BO">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Jpt-LF-Dwk">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXMailCell" rowHeight="161" id="Jpt-LF-Dwk" customClass="ZXMailCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Jpt-LF-Dwk" id="ejV-Wj-wZr">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jyS-t8-4Vp">
+                                                    <rect key="frame" x="67" y="20" width="430" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="hTA-Id-hTQ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="eX7-Kb-OTv">
+                                                    <rect key="frame" x="15" y="8" width="44" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="eCM-vq-GQH"/>
+                                                        <constraint firstAttribute="height" constant="44" id="v14-oa-Caq"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2EU-ka-2fQ">
+                                                    <rect key="frame" x="555" y="16" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="kK5-Dx-NPY"/>
+                                                        <constraint firstAttribute="width" constant="30" id="rpF-Am-vMc"/>
+                                                    </constraints>
+                                                    <state key="normal" title="删除">
+                                                        <color key="titleColor" red="0.59999999999999998" green="0.76078431372549016" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tMS-Dz-7Tt">
+                                                    <rect key="frame" x="505" y="20" width="42" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="IYk-oB-lap"/>
+                                                        <constraint firstAttribute="width" priority="200" constant="42" id="kwC-Ni-Dg7"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJf-AF-ngT" customClass="MLEmojiLabel">
+                                                    <rect key="frame" x="15" y="60" width="570" height="65"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <connections>
+                                                        <outlet property="delegate" destination="Jpt-LF-Dwk" id="aE5-Y4-Cyk"/>
+                                                    </connections>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="更多留言" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D16-o0-94S">
+                                                    <rect key="frame" x="15" y="132" width="570" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Ilt-ju-qRR"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O6r-lO-Psc">
+                                                    <rect key="frame" x="8" y="8" width="300" height="81"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="2EU-ka-2fQ" firstAttribute="leading" secondItem="tMS-Dz-7Tt" secondAttribute="trailing" constant="8" id="1e5-iT-M9q"/>
+                                                <constraint firstItem="lJf-AF-ngT" firstAttribute="top" secondItem="eX7-Kb-OTv" secondAttribute="bottom" constant="8" id="3bE-XS-wf1"/>
+                                                <constraint firstItem="D16-o0-94S" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="5Zr-d5-NNe"/>
+                                                <constraint firstItem="tMS-Dz-7Tt" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" constant="12" id="7qK-07-R2m"/>
+                                                <constraint firstItem="D16-o0-94S" firstAttribute="top" secondItem="lJf-AF-ngT" secondAttribute="bottom" constant="7" id="AfQ-iB-Kr5"/>
+                                                <constraint firstItem="jyS-t8-4Vp" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" constant="12" id="E93-5N-SzB"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lJf-AF-ngT" secondAttribute="trailing" constant="7" id="LwZ-CS-sQj"/>
+                                                <constraint firstItem="eX7-Kb-OTv" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" id="OBH-NH-Rnw"/>
+                                                <constraint firstItem="tMS-Dz-7Tt" firstAttribute="leading" secondItem="jyS-t8-4Vp" secondAttribute="trailing" constant="8" id="PfD-fm-XDs"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="D16-o0-94S" secondAttribute="bottom" constant="-1" id="Wbh-VM-YSX"/>
+                                                <constraint firstItem="eX7-Kb-OTv" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="X4n-PO-iIl"/>
+                                                <constraint firstItem="2EU-ka-2fQ" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" constant="8" id="Zkz-76-pgP"/>
+                                                <constraint firstItem="jyS-t8-4Vp" firstAttribute="leading" secondItem="eX7-Kb-OTv" secondAttribute="trailing" constant="8" id="dVK-Id-qyw"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="D16-o0-94S" secondAttribute="trailing" constant="7" id="e9t-db-96s"/>
+                                                <constraint firstItem="tMS-Dz-7Tt" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" constant="12" id="gcp-W8-td8"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="2EU-ka-2fQ" secondAttribute="trailing" constant="7" id="hBe-y9-1bQ"/>
+                                                <constraint firstItem="lJf-AF-ngT" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="vNT-bt-Ctx"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="O6r-lO-Psc"/>
+                                                </mask>
+                                                <mask key="constraints">
+                                                    <exclude reference="gcp-W8-td8"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="deleteButton" destination="2EU-ka-2fQ" id="8Ol-BI-AnU"/>
+                                            <outlet property="emojiLabel" destination="lJf-AF-ngT" id="NAd-53-Qwq"/>
+                                            <outlet property="logoImage" destination="eX7-Kb-OTv" id="xVO-Ij-Bab"/>
+                                            <outlet property="moreLabel" destination="D16-o0-94S" id="J2X-xz-zUJ"/>
+                                            <outlet property="timeLabel" destination="tMS-Dz-7Tt" id="Ucv-pj-ARm"/>
+                                            <outlet property="titleLabel" destination="jyS-t8-4Vp" id="CL7-YY-zqu"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="9PU-fa-h8V">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9PU-fa-h8V" id="XFw-4Y-D85">
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -539,7 +648,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hfG-Xo-oKQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3124" y="371"/>
+            <point key="canvasLocation" x="3124" y="360"/>
         </scene>
         <!--User Mail View Controller-->
         <scene sceneID="Bar-Nj-1YN">
