--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -512,7 +512,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXMailCell" rowHeight="161" id="Jpt-LF-Dwk" customClass="ZXMailCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ZXMailCell" rowHeight="161" id="Jpt-LF-Dwk" customClass="ZXMailCell">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Jpt-LF-Dwk" id="ejV-Wj-wZr">
@@ -550,6 +550,9 @@
                                                         <color key="titleColor" red="0.59999999999999998" green="0.76078431372549016" blue="0.71372549019607845" alpha="1" colorSpace="calibratedRGB"/>
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="deleteAction:" destination="Rqg-8d-eg6" eventType="touchUpInside" id="bP6-oF-K7Z"/>
+                                                    </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tMS-Dz-7Tt">
                                                     <rect key="frame" x="505" y="20" width="42" height="21"/>
@@ -579,11 +582,16 @@
                                                     <color key="textColor" red="0.59999999999999998" green="0.76078431369999999" blue="0.71372549019999998" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XOD-C4-s7R">
+                                                    <rect key="frame" x="15" y="61" width="570" height="63"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O6r-lO-Psc">
                                                     <rect key="frame" x="8" y="8" width="300" height="81"/>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="D16-o0-94S" firstAttribute="top" secondItem="XOD-C4-s7R" secondAttribute="bottom" constant="8" id="03u-5O-fjh"/>
                                                 <constraint firstItem="2EU-ka-2fQ" firstAttribute="leading" secondItem="tMS-Dz-7Tt" secondAttribute="trailing" constant="8" id="1e5-iT-M9q"/>
                                                 <constraint firstItem="lJf-AF-ngT" firstAttribute="top" secondItem="eX7-Kb-OTv" secondAttribute="bottom" constant="8" id="3bE-XS-wf1"/>
                                                 <constraint firstItem="D16-o0-94S" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="5Zr-d5-NNe"/>
@@ -596,14 +604,18 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="D16-o0-94S" secondAttribute="bottom" constant="-1" id="Wbh-VM-YSX"/>
                                                 <constraint firstItem="eX7-Kb-OTv" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="X4n-PO-iIl"/>
                                                 <constraint firstItem="2EU-ka-2fQ" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" constant="8" id="Zkz-76-pgP"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="XOD-C4-s7R" secondAttribute="trailing" constant="7" id="cvw-07-lkL"/>
                                                 <constraint firstItem="jyS-t8-4Vp" firstAttribute="leading" secondItem="eX7-Kb-OTv" secondAttribute="trailing" constant="8" id="dVK-Id-qyw"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="D16-o0-94S" secondAttribute="trailing" constant="7" id="e9t-db-96s"/>
                                                 <constraint firstItem="tMS-Dz-7Tt" firstAttribute="top" secondItem="ejV-Wj-wZr" secondAttribute="topMargin" constant="12" id="gcp-W8-td8"/>
+                                                <constraint firstItem="XOD-C4-s7R" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="grT-FI-j59"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="2EU-ka-2fQ" secondAttribute="trailing" constant="7" id="hBe-y9-1bQ"/>
+                                                <constraint firstItem="XOD-C4-s7R" firstAttribute="top" secondItem="eX7-Kb-OTv" secondAttribute="bottom" constant="9" id="tg4-Ah-sUq"/>
                                                 <constraint firstItem="lJf-AF-ngT" firstAttribute="leading" secondItem="ejV-Wj-wZr" secondAttribute="leadingMargin" constant="7" id="vNT-bt-Ctx"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="subviews">
+                                                    <exclude reference="lJf-AF-ngT"/>
                                                     <exclude reference="O6r-lO-Psc"/>
                                                 </mask>
                                                 <mask key="constraints">
@@ -614,6 +626,7 @@
                                         <connections>
                                             <outlet property="deleteButton" destination="2EU-ka-2fQ" id="8Ol-BI-AnU"/>
                                             <outlet property="emojiLabel" destination="lJf-AF-ngT" id="NAd-53-Qwq"/>
+                                            <outlet property="emojiView" destination="XOD-C4-s7R" id="Kab-9E-1cJ"/>
                                             <outlet property="logoImage" destination="eX7-Kb-OTv" id="xVO-Ij-Bab"/>
                                             <outlet property="moreLabel" destination="D16-o0-94S" id="J2X-xz-zUJ"/>
                                             <outlet property="timeLabel" destination="tMS-Dz-7Tt" id="Ucv-pj-ARm"/>
@@ -648,7 +661,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hfG-Xo-oKQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3124" y="360"/>
+            <point key="canvasLocation" x="3124" y="358"/>
         </scene>
         <!--User Mail View Controller-->
         <scene sceneID="Bar-Nj-1YN">
