--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -2184,6 +2184,9 @@
                                                         <color key="titleColor" red="0.33725490200000002" green="0.33725490200000002" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <segue destination="b6n-20-Mj8" kind="show" identifier="praiseDetail" id="o7k-Kp-MAW"/>
+                                                    </connections>
                                                 </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mail_comment" translatesAutoresizingMaskIntoConstraints="NO" id="6v2-qC-3av">
                                                     <rect key="frame" x="15" y="40" width="16" height="16"/>
@@ -2522,6 +2525,81 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FlJ-wk-Z5m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4461" y="-302"/>
+        </scene>
+        <!--Praise List View Controller-->
+        <scene sceneID="Sfu-Sb-yeS">
+            <objects>
+                <viewController storyboardIdentifier="ZXPraiseListViewController" id="b6n-20-Mj8" customClass="ZXPraiseListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="i6d-aW-XOy"/>
+                        <viewControllerLayoutGuide type="bottom" id="MC6-aE-DSW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ow1-Eg-J9M">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Q0Z-dU-aHl">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="imageCell" id="9aa-3s-uKh" customClass="ZXBaseCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9aa-3s-uKh" id="BGa-wz-qFX">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mXK-SA-2jk">
+                                                    <rect key="frame" x="15" y="7" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="3Mp-R6-ccm"/>
+                                                        <constraint firstAttribute="width" constant="30" id="LhY-0k-UG6"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MgU-ov-i6y">
+                                                    <rect key="frame" x="53" y="12" width="539" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="qXA-RE-kpU"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="MgU-ov-i6y" firstAttribute="trailing" secondItem="BGa-wz-qFX" secondAttribute="trailingMargin" id="AlO-eQ-di0"/>
+                                                <constraint firstItem="mXK-SA-2jk" firstAttribute="leading" secondItem="BGa-wz-qFX" secondAttribute="leadingMargin" constant="7" id="FBU-Nv-xGU"/>
+                                                <constraint firstItem="mXK-SA-2jk" firstAttribute="top" secondItem="BGa-wz-qFX" secondAttribute="topMargin" constant="-1" id="LSn-Va-DcF"/>
+                                                <constraint firstItem="MgU-ov-i6y" firstAttribute="top" secondItem="BGa-wz-qFX" secondAttribute="topMargin" constant="4" id="XzD-hE-tZA"/>
+                                                <constraint firstItem="MgU-ov-i6y" firstAttribute="leading" secondItem="mXK-SA-2jk" secondAttribute="trailing" constant="8" id="oS3-Hm-pGa"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="logoImage" destination="mXK-SA-2jk" id="Js7-LA-QbY"/>
+                                            <outlet property="titleLabel" destination="MgU-ov-i6y" id="A2O-iZ-NlK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="b6n-20-Mj8" id="oWo-mN-2v1"/>
+                                    <outlet property="delegate" destination="b6n-20-Mj8" id="h9A-tP-dyd"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Q0Z-dU-aHl" firstAttribute="leading" secondItem="ow1-Eg-J9M" secondAttribute="leadingMargin" constant="-16" id="6uB-zU-9Oc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Q0Z-dU-aHl" secondAttribute="trailing" constant="-16" id="CCz-f7-ICM"/>
+                            <constraint firstItem="MC6-aE-DSW" firstAttribute="top" secondItem="Q0Z-dU-aHl" secondAttribute="bottom" id="Vwi-cA-xgU"/>
+                            <constraint firstItem="Q0Z-dU-aHl" firstAttribute="top" secondItem="ow1-Eg-J9M" secondAttribute="topMargin" id="m0W-1E-gWW"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Q0Z-dU-aHl" id="R6P-9o-sqY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ESY-lz-Xug" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5103" y="-302"/>
         </scene>
     </scenes>
     <resources>
